--- a/style/main.css
+++ b/style/main.css
@@ -72,6 +72,7 @@ body {
 }
 
 .header__logo {
+  font-size: calc( (100vw - 30rem)/(80 - 30) * (2.5 - 1) + 1rem);
   font-family: 'Cherry Swash', cursive;
   font-weight: 400;
 
