--- a/style/main.css
+++ b/style/main.css
@@ -13,7 +13,6 @@ body {
   flex-direction: column;
 
   max-width: 1280px;
-  min-width: 400px;
 
   font-family: 'Arial', 'Helvetica', sans-serif;
   text-align: center;
@@ -22,20 +21,6 @@ body {
 
   font-size: calc(1rem + 0.5vw);
 }
-
-.container,
- .header,
- .promo,
- .main,
- .testimonial,
- .contact,
- .footer
- {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
- }
 
 .container {
   display: flex;
@@ -46,7 +31,7 @@ body {
   width: 80%;
   margin: 0 10%;
 
-  padding: 5.5rem 0;
+  padding: 4rem 0;
 }
 
 .header .container,
@@ -54,7 +39,7 @@ body {
   padding: 0;
 }
 
-.content > .testimonial,
+.testimonial,
 .wrap > .footer,
 .form__submit {
   background-color: #00d089;
@@ -72,7 +57,7 @@ body {
 }
 
 .header__logo {
-  font-size: calc( (100vw - 30rem)/(80 - 30) * (2.5 - 1) + 1rem);
+  font-size: calc(20px + 1.3vw);
   font-family: 'Cherry Swash', cursive;
   font-weight: 400;
 
@@ -87,6 +72,7 @@ body {
   position: relative;
   margin: 0 1rem;
 
+  font-size: calc(10px + 0.9vw);
   font-stretch: ultra-condensed;
 
   text-decoration: none;
@@ -95,7 +81,7 @@ body {
   color: #ffffff;
 }
 
-.header__nav-icon {
+.header__burger-menu {
   display: none;
   position: relative;
   flex-direction: column;
@@ -110,12 +96,12 @@ body {
 .header__link + .header__link::before {
   content: '';
   position: absolute;
-  width: 1.2rem;
+  width: calc(1.2rem + 0.4vw);
   height: 0.11rem;
 
   transform: rotate(-65deg);
-  top: 0.7rem;
-  left: -2rem;
+  top: calc(0.7rem + 0.1vw);
+  left: calc(-2rem - 0.2vw);
 
   background: #ffffff;
 }
@@ -128,24 +114,27 @@ body {
 }
 
 .promo .container {
-  padding: 0%;
-  margin-top: 8rem;
+  padding-top: 8rem;
+  padding-bottom: 1rem;
 }
 
 .promo__title {
-  text-transform: uppercase;
+  max-width: 517px;
   padding-bottom: 2.8rem;
   margin: 0;
-  max-width: 517px;
+
+  font-size: calc(20px + 1.3vw);
+  text-transform: uppercase;
 }
 
 .promo__btn {
-  padding: 1% 3%;
+  padding: 0.3rem 1.4rem;
   margin-bottom: 7.5rem;
 
   border: 1px solid #ffffff;
-  border-radius: 2px;
+  border-radius: 0.5rem;
 
+  font-size: calc(1rem + 1vw);
   font-weight: lighter;
 
   background-color: transparent;
@@ -156,21 +145,17 @@ body {
 
 .promo__list {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 0;
+  width: 15%;
 
   list-style: none;
 }
 
 .promo__item {
-  height: 9px;
-  width: 9px;
-
-  min-width: 2px;
-  min-height: 2px;
-
-  margin: 0 0.3rem;
+  height: calc(2px + 0.6vw);
+  width: calc(2px + 0.6vw);
 
   border-radius: 50%;
   background-color: #ffffff;
@@ -185,17 +170,20 @@ body {
   color: #000000;
 }
 
+.main p {
+  margin-bottom: 3rem;
+}
+
 .main-list__icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 
 .main-icon {
   height: 56px;
   width: 56px;
-
-  margin: 0 4rem;
 }
 
 .icon-basket {
@@ -222,8 +210,8 @@ body {
   justify-content: center;
   align-items: center;
 
-  height: 8.4rem;
-  width: 8.4rem;
+  height: calc(105px + 1.3vw);
+  width: calc(105px + 1.3vw);
 
   border-radius: 50%;
 
@@ -239,9 +227,9 @@ body {
 .testimonial__avatar::before {
   content: 'Dhavan';
   position: absolute;
-  left: 10rem;
+  left: calc(8rem + 1.3vw);
 
-  font-size: 1.5rem;
+  font-size: (1rem + 1.3vw);
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -249,10 +237,10 @@ body {
 .testimonial__avatar::after {
   content: open-quote;
   position: absolute;
-  left: 9.5rem;
-  top: -8rem;
+  left: calc(7.5rem + 1.3vw);
+  top: -5rem;
 
-  font-size: 15rem;
+  font-size: calc(10rem + 1.3vw);
   font-weight: bold;
 
   transform: rotate(180deg);
@@ -278,9 +266,8 @@ body {
   justify-content: center;
   align-items: center;
 
-  margin: 45px;
+  padding: calc(65px + 1vw) calc(70px + 1vw) calc(35px + 1vw);
 
-  border: 100px solid #ffffff;
   border-radius: 50%;
   box-shadow: 0 0 77px -27px #000000;
 
@@ -289,10 +276,27 @@ body {
 
 .form > input {
   align-self: stretch;
-  margin-bottom: 10px;
+  margin-bottom: 14px;
+
+  border-radius: 0;
+  border: 2px solid #d3d3d3;
+  color: #a9a9a9;
+}
+
+.form__user-message,
+ input::placeholder {
+   color: #a9a9a9;
+   font-size: 14px;
+   padding-left: 3px;
 }
 
 .form__user-message {
+  width: calc(220px + 1.3vw);
+  margin-bottom: 33px;
+
+  border: 2px solid #d3d3d3;
+
+  font-family: 'Arial', 'Helvetica', sans-serif;
   resize: none;
 }
 
@@ -306,7 +310,6 @@ body {
 
   width: 68px;
   height: 68px;
-  margin-top: 5%;
 
   border-radius: 50%;
   border: none;
@@ -316,31 +319,36 @@ body {
   cursor: pointer;
 }
 
-.form__submit::before {
-  content: '';
-  position: relative;
-  right: 10px;
-  width: 60%;
-  height: 10px;
+.form__submit::before,
+.form__submit::after {
+  position: absolute;
+
+  width: 17%;
 
   background-color: #ffffff;
-  transform: rotate(45deg);
+  border-radius: 3px;
+}
+
+.form__submit::before {
+  content: '';
+  left: 24.5%;
+  height: 40%;
+
+  transform: rotate(-45deg);
 }
 
 
 .form__submit::after {
   content: '';
-  position: absolute;
-  left: 25px;
-  width: 60%;
-  height: 10px;
+  right: 28.3%;
+  height: 60%;
 
-  background-color: #ffffff;
-  transform: rotate(-45deg);
+  transform: rotate(45deg);
 }
 
 /* -------------------------------- Footer styles ----------------------------*/
 
 .footer__copyright {
+  font-size: 14px;
   text-transform: uppercase;
 }
