--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,12 @@
 /* ----------------------------- Default styles ------------------------------*/
-body {
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-
+* {
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  text-align: center;
 }
 
 .wrap {
@@ -13,6 +14,7 @@ body {
   flex-direction: column;
 
   max-width: 1280px;
+  margin: 0 auto;
 
   font-family: 'Arial', 'Helvetica', sans-serif;
   text-align: center;
@@ -48,6 +50,7 @@ body {
 /* ------------------------------ Header styles ------------------------------*/
 .header {
   background-color: #55adb7;
+  padding: calc(10px + 1.3vw) 0;
 }
 
 .header > .container {
@@ -168,6 +171,10 @@ body {
 /* ------------------------------ Main styles --------------------------------*/
 .main {
   color: #000000;
+}
+
+.main h3 {
+  margin-bottom: 1rem;
 }
 
 .main p {
@@ -347,6 +354,10 @@ body {
 }
 
 /* -------------------------------- Footer styles ----------------------------*/
+
+.footer {
+  padding: calc(5px + 1.3vw) 0;
+}
 
 .footer__copyright {
   font-size: 14px;
